# reflective

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: ACKNOWLEDGMENTS.md  AUTHORS.md  CHANGELOG.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FUNDING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_change.yaml  feature_request.yaml  housekeeping.yaml
.github/workflows/: build.yml  codeql-analysis.yml  project-release-test.yml  project-release.yml  project-test.yml  stale.yml
docs/: README.md
docs/wiki/: README.md
docs/wiki/configuration/: README.md
docs/wiki/contributing/: README.md  labeling-standards.md
docs/wiki/development/: README.md
docs/wiki/project/: README.md  features.md  milestones.md  releases.md  roadmap.md
docs/wiki/support/: README.md
docs/wiki/testing/: README.md
src/reflective/: __init__.py  cache.py  context.py  core.py  exceptions.py  query.py  util.py
src/reflective/types/: __init__.py  base.py  dict.py  list.py  numeric.py  query.py  simple.py  string.py  tuple.py
src/tests/: test_access.py  test_bools.py  test_delete.py  test_dumps.py  test_dynamic_references.py  test_module_query.py  test_path_queries.py  test_representations.py  test_strings.py  test_typing.py  test_update.py
